maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:8: error: '=' expected but ';' found.
    for (i<-0 to h-1){
^