maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    val l = getMondeLargeur()
    val h = getMondeHauteur()
    var a = 0
    var b = 0
    var num
    for (i<-0 to h-1){
        for(j<- 0 to l-1)
            {if (aBiscuit(i,j))
                {a=i;b=j;setIndication(i,j,0)}}}
  
    avance(a,b) 
  
  
}


def avance (x:Int,y:Int)  {
  val l = getMondeLargeur()
  val h = getMondeHauteur()
  var num = getIndication(x,y)
  var (s,n,o,e)=(false,false,false,false)
  if (y<l-1 && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999))
                {setIndication(x,y+1,num+1);s=true}
  if (y>0 && !aMurNord(x,y) && getIndication(x,y-1)==9999)
                {setIndication(x,y-1,num+1);n=true}
  if (x>0 && !aMurOuest(x,y)&& getIndication(x-1,y)==9999)
                {setIndication(x-1,y,num+1);o=true}
  if (x<h-1 && !aMurOuest(x+1,y)&& getIndication(x+1,y)==9999)
                {setIndication(x+1,y,num+1);e=true}             
  
  if (o)             {avance(x-1,y)}
  if (n)             {avance(x,y-1)}
  if (s)             {avance(x,y+1)}
  if (e)             {avance(x+1,y)}}